# gait

./: .gait.yaml  .gitignore  .golangci.yml  .goreleaser.yaml  .pre-commit-config.yaml  .tool-versions  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Makefile  PRD.md  README.md  ROADMAP.md  SECURITY.md  go.mod  go.sum
.codeql/: go.sarif  python.sarif
.githooks/: pre-push
.github/: pull_request_template.md
docs/: PLAN_v2.6_activation.md  PLAN_v2.7_distribution.md  README.md  adopt_in_one_pr.md  agent_integration_boundary.md  approval_runbook.md  architecture.md  ci_regress_kit.md  durable_jobs.md  evidence_templates.md  external_tool_registry_policy.md  failure_taxonomy_exit_codes.md  flows.md  homebrew.md  install.md  integration_checklist.md  marketplace_action_publishing.md  mcp_capability_matrix.md  packaging.md  policy_authoring.md  policy_rollout.md  positioning.md  project_defaults.md  siem_ingestion_recipes.md  test_cadence.md  threat_model.md  uat_functional_plan.md  ui_localhost.md  voice_mode.md  zero_trust_stack.md
docs-site/: README.md  package-lock.json  package.json
examples/: README.md
perf/: bench_baseline.json  context_budgets.json  (+4 more)
sdk/python/: pyproject.toml
sdk/python/examples/: langchain_style_tool_decorator.py  openai_style_tool_decorator.py
sdk/python/gait/: __init__.py  adapter.py  client.py  decorators.py  langchain.py  models.py  session.py
sdk/python/tests/: helpers.py  test_adapter.py  test_basic.py  test_client.py  test_decorators.py  test_langchain_middleware.py  test_primitive_fixtures.py  test_session.py
(+2137 files in other folders)
