[project]
name = "gait"
version = "0.0.0.dev0"
description = "Gait Python SDK (thin wrapper)"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.8",
  "mypy>=1.8",
  "bandit>=1.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
packages = ["gait"]
